--- a/src/containers/ResultChecker/ResultChecker.css
+++ b/src/containers/ResultChecker/ResultChecker.css
@@ -1,9 +1,10 @@
 
 .resultsChecker {
     display: flex;
+    flex-direction: column;
     flex-wrap:nowrap;
     background-color: var(--grey2);
-    justify-content: center;
+    justify-content: left;
     
 
 
