Playing around with the CSS

--- a/src/containers/CognitiveReappraisalNavigation/CognitiveReappraisalNavigation.css
+++ b/src/containers/CognitiveReappraisalNavigation/CognitiveReappraisalNavigation.css
@@ -20,7 +20,7 @@
   .navigationButtonSpace {
     display: grid;
     justify-items: center;
-    height: 150px;
+    height: 6em;
     witdth: 80%;
 
 
