--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  display: grid;
+  
   text-align: center;
 }
 
@@ -79,7 +81,7 @@ H1 {
   max-width: 960px;
   border: 3px solid rgb(108, 109, 108);
   padding: 20px;
-}
+} 
 
 .headerBar {
   display: flex;
@@ -124,3 +126,33 @@ H1 {
   padding: 10px;
   
 }
+
+
+
+img {
+    max-width: 100%;
+    height: auto;
+
+    }
+
+
+    .center {
+      display: flex;
+      align-items: 'center';
+      justify-content: space-between;
+      margin-left: 15px;
+      margin-right: 15px;
+      
+  }
+  
+  .testSpace {
+      display: grid;
+      height: 12em;
+      width: 100%;
+      background-color: #FFFFFF;
+      justify-content: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+  
+  }
+  
