--- a/src/containers/Cognitive-Reappraisal-PhotoSpace/PhotoSpace.css
+++ b/src/containers/Cognitive-Reappraisal-PhotoSpace/PhotoSpace.css
@@ -1,9 +1,9 @@
 .photospace {
-    display: flex;
-    flex-wrap:nowrap;
-    height: 650px;
+    display: grid;
+    height: 25em;
     width: 100%;
     background-color: var(--grey5);
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     }
