--- a/src/containers/Practice-n-back-image-array/imageArray.css
+++ b/src/containers/Practice-n-back-image-array/imageArray.css
@@ -1,8 +1,7 @@
 .imageArray {
     background-color: #000000;
     min-height: auto;
-    display: flex;
-    flex-direction: column;
+    display: grid;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
