--- a/src/containers/PracticePhotoSpace/PhotoSpace.css
+++ b/src/containers/PracticePhotoSpace/PhotoSpace.css
@@ -1,9 +1,17 @@
 .photospace {
-    display: flex;
-    flex-wrap:nowrap;
-    height: 650px;
+    display: grid;
+    height: 12em;
     width: 100%;
     background-color: var(--grey5);
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    }
+
+
+img {
+    max-width: 100%;
+    height: auto;
+
     }
