--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   display: grid;
-  
+  background-color: var(--grey4);
   text-align: center;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .App-header {
-  background-color: #8db0f6;
+  background-color: var(--grey4);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -78,94 +78,128 @@ H1 {
 
 .appWrapper {
   margin: auto;
-  max-width: 960px;
-  border: 3px solid rgb(108, 109, 108);
-  padding: 20px;
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  padding: 0px;
+  background-color: var(--grey4);
+  text-align: center;
+
 } 
 
 .headerBar {
   display: flex;
   flex-wrap:nowrap;
   height: 150px;
-  background-color: var(--grey2);
+  background-color: var(green);
   justify-content: center;
   }
 
 .navBarWrapper {
   background: var(--grey3);
-  height: 2em;
+  height: auto;
 }
 
 .navBar {
-      display: flex;
-      justify-content: space-evenly;
-      list-style: square;
-      max-width: 960px;
-      margin: 0 auto;  
-      padding: 20px;  
+    display: flex;
+    justify-content: space-evenly;
+    list-style: square;
+    width: auto;
+    max-width: 960px;
+    margin: 0 auto;  
+    padding: 20px;  
 
-      margin-top: -13px;
-  }
+    margin-top: -13px;
+}
 
 
 
 .buttonSpace {
   display: flex;
-  height: auto;
-  width: 80%;
+  height: 100px;
+  width: auto;
   background-color: var(--grey4);
   justify-content: space-evenly;
   align-content: space-between;
   padding: 10px;
-
-  border-style: solid;
-  border-color: blue;
   
 }
 
 
+.center {
+  display: flex;
+  align-items: 'center';
+  justify-content: space-between;
+  margin-left: 15px;
+  margin-right: 15px;
+  
+}
 
-    .center {
-      display: flex;
-      align-items: 'center';
-      justify-content: space-between;
-      margin-left: 15px;
-      margin-right: 15px;
-      
+.mainPageButtons {
+  margin: 15px;
+}
+
+.navigationBar {
+  display: flex;
+  height: 100%;
+  align-items: 'center';
+  justify-content: space-between;
+  margin-left: 15px;
+  margin-right: 15px;
+  
+}
+
+.testSpace {
+  display: grid;
+  background-color: #000000;
+  justify-content: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-style: solid;
+  border-color: coral;
+  overflow: auto;
+
+}
+
+.photoSpace {
+width: auto;
+display: grid;
+Background-color: #FFFFFF;
+border-style: solid;
+justify-content: center;
+overflow: auto;
+
+}
+
+img {
+  max-height: 450px;
+  max-width: 100%;
+  height: auto;
+  object-fit: scale-down;
+  border: 5px;
+  border-style: solid;
+  border-color: red;
+  display:inline-block;
+
+
   }
-  
-  .testSpace {
-      display: grid;
-      background-color: #000000;
-      justify-content: center;
-      padding-top: 20px;
-      padding-bottom: 20px;
-      border-style: solid;
-      border-color: coral;
-      overflow: auto;
-  
-  }
 
-  .photoSpace {
-    display: grid;
+.field {
+  marginTop: 20;
+  marginBotton: 20;
+  text-align: center;
+  witdth: auto;
+}
 
-    background-color: #FFFFFF;
-    border-style: solid;
-    border-color: blue;
-    justify-content: center;
-    overflow: auto;
 
-    }
 
-    img {
-      max-height: 400px;
-      max-width: 100%;
-      height: auto;
-      object-fit: scale-down;
-      border: 5px;
-      border-style: solid;
-      border-color: red;
-      display:inline-block
-  
-      }
+
+.navigationButtonSpace {
+  display: grid;
+  justify-items: center;
+  height: auto;
+  witdth: auto;
+
+
+} 
   
