Improved slightly the view height units

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ H1 {
   margin: auto;
   width: auto;
   max-width: 100%;
-  height: auto;
+  height: 100vh;
   padding: 0px;
   background-color: var(--grey4);
   text-align: center;
@@ -116,7 +116,7 @@ H1 {
 
 .buttonSpace {
   display: flex;
-  height: 100px;
+  height: 10vh;
   width: auto;
   background-color: var(--grey4);
   justify-content: space-evenly;
@@ -161,18 +161,18 @@ H1 {
 
 }
 
-.photoSpace {
+.photospace {
 width: auto;
+height: 80vh;
 display: grid;
-Background-color: #FFFFFF;
-border-style: solid;
+background-color: var(--grey4);
 justify-content: center;
-overflow: auto;
+padding: 10px;
 
 }
 
 img {
-  max-height: 450px;
+  max-height: 80vh;
   max-width: 100%;
   height: auto;
   object-fit: scale-down;
