--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,17 @@
   color: white;
 }
 
+.Intro-header {
+  background-color: var(--grey4);
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 .App-link {
   color: #61dafb;
 }
